crates/yaml-db/tests/snapshots/golden_tests__task_priorities.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
tasks:
- id: 1
  feature: test
  discipline: backend
  title: Task with priority Some(Low)
  status: pending
  priority: low
- id: 2
  feature: test
  discipline: backend
  title: Task with priority Some(Medium)
  status: pending
  priority: medium
- id: 3
  feature: test
  discipline: backend
  title: Task with priority Some(High)
  status: pending
  priority: high
- id: 4
  feature: test
  discipline: backend
  title: Task with priority Some(Critical)
  status: pending
  priority: critical
- id: 5
  feature: test
  discipline: backend
  title: Task with priority None
  status: pending
