crates/yaml-db/tests/snapshots/golden_tests__task_with_comments.snap
---
source: crates/yaml-db/tests/golden_tests.rs
assertion_line: 572
expression: yaml_content
---
tasks:
- id: 1
  feature: auth
  discipline: backend
  title: Implement login
  status: pending
  comments:
  - author: human
    body: Use bcrypt, not SHA256
    created: 2026-02-06T10:30:00Z
  - author: agent
    agent_task_id: 5
    body: 'Failed: forgot JWT_SECRET'
    created: 2026-02-06T14:22:00Z
